// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common/SelectBox labels should print a * on label when input is required 1`] = `
<div
  className="select"
  style={Object {}}
>
  <label
    htmlFor="name"
  >
    my label
    *
  </label>
  <div
    className="react-select"
  >
    {"name":"react-select","props":{"noResultsText":"Aucun résultat","clearAllText":"Effacer tout","clearValueText":"Effacer","simpleValue":true,"anyTouched":false,"asyncValidating":false,"dirty":false,"form":"testForm","initialized":false,"invalid":false,"pristine":true,"submitting":false,"submitFailed":false,"submitSucceeded":false,"valid":true,"pure":true,"array":{},"options":[]}}
  </div>
</div>
`;

exports[`common/SelectBox labels should print a label 1`] = `
<div
  className="select"
  style={Object {}}
>
  <label
    htmlFor="name"
  >
    my label
  </label>
  <div
    className="react-select"
  >
    {"name":"react-select","props":{"noResultsText":"Aucun résultat","clearAllText":"Effacer tout","clearValueText":"Effacer","simpleValue":true,"anyTouched":false,"asyncValidating":false,"dirty":false,"form":"testForm","initialized":false,"invalid":false,"pristine":true,"submitting":false,"submitFailed":false,"submitSucceeded":false,"valid":true,"pure":true,"array":{},"options":[]}}
  </div>
</div>
`;

exports[`common/SelectBox should add custom className 1`] = `
<div
  className="select custom"
  style={Object {}}
>
  <div
    className="react-select"
  >
    {"name":"react-select","props":{"noResultsText":"Aucun résultat","clearAllText":"Effacer tout","clearValueText":"Effacer","simpleValue":true,"anyTouched":false,"asyncValidating":false,"dirty":false,"form":"testForm","initialized":false,"invalid":false,"pristine":true,"submitting":false,"submitFailed":false,"submitSucceeded":false,"valid":true,"pure":true,"array":{},"options":[]}}
  </div>
</div>
`;

exports[`common/SelectBox should add custom style 1`] = `
<div
  className="select"
  style={
    Object {
      "backgroundColor": "red",
    }
  }
>
  <div
    className="react-select"
  >
    {"name":"react-select","props":{"noResultsText":"Aucun résultat","clearAllText":"Effacer tout","clearValueText":"Effacer","simpleValue":true,"anyTouched":false,"asyncValidating":false,"dirty":false,"form":"testForm","initialized":false,"invalid":false,"pristine":true,"submitting":false,"submitFailed":false,"submitSucceeded":false,"valid":true,"pure":true,"array":{},"options":[]}}
  </div>
</div>
`;

exports[`common/SelectBox should have a default behaviour 1`] = `
<div
  className="select"
  style={Object {}}
>
  <div
    className="react-select"
  >
    {"name":"react-select","props":{"noResultsText":"Aucun résultat","clearAllText":"Effacer tout","clearValueText":"Effacer","simpleValue":true,"anyTouched":false,"asyncValidating":false,"dirty":false,"form":"testForm","initialized":false,"invalid":false,"pristine":true,"submitting":false,"submitFailed":false,"submitSucceeded":false,"valid":true,"pure":true,"array":{},"options":[]}}
  </div>
</div>
`;
